Fix bugs detected by SonarQube (#4)